--- a/task-08/index.html
+++ b/task-08/index.html
@@ -1,30 +1,160 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee+Inline">
-  <script src="index.js"></script> 
-  <meta charset="utf-8">
-  <title>Drum Kit</title>
+	<meta charset="utf-8" />
+	<script src="wasm_exec.js"></script>
 </head>
 
 <body>
+	<h1>Boring Counter</h1>
+	<script>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
-  <style>h1 {font-family: "Bungee Inline", sans-serif;}</style>
-  <div class="set">
-    <style>button {font-family: "Bungee Inline", sans-serif;}</style>
-    <button class="w drum">W</button>
-    <button class="a drum">A</button>
-    <button class="s drum">S</button>
-    <button class="d drum">D</button>
-    <button class="j drum">J</button>
-    <button class="k drum">K</button>
-    <button class="l drum">L</button>
-  </div>
-  
+		const go = new Go();
+		WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
+			go.run(result.instance);
+
+		});
+	</script>
+
+	<div id="box1">
+		<p id="int">
+			Go!
+		</p>
+	</div>
+	<br>
+	
+	<div class="wrapper">
+		<button onclick="inc('int')" id="inc"; class="Increment" style="background-color:#f14e4e;">Increment</button>
+		<button onclick="dec('int')" id="dec"; class="Decrement" style="background-color:#f1bb4e;">Decrement</button>
+		<button onclick="res('int')" id="res"; class="Reset" style="background-color:#4ec3f1;">Reset</button>
+	</div>
+
+
+	<style>
+		body {
+			background-color: rgb(207, 218, 219);
+		}
+
+		h1 {
+			text-align: center;
+
+		}
+
+		p {
+
+			text-align: center;
+			font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+			font-size: 300px;
+			font-weight: bolder;
+			margin: 0 auto;
+
+
+		}
+
+		#box1 {
+
+			width: 600px;
+			height: 400px;
+			margin: 10px;
+			padding: 10px;
+			background: rgb(255, 255, 255);
+			border-radius: 25px;
+			margin: 0 auto;
+
+		}
+
+		.wrapper {
+			text-align: center;
+		}
+
+		button.Increment {
+
+			display: inline-block;
+			padding: 0.4em 1.3em;
+			border: 0.16em solid rgba(255, 255, 255, 0);
+			border-radius: 2em;
+			box-sizing: border-box;
+			text-decoration: none;
+			font-family: 'Roboto', sans-serif;
+			font-weight: 300;
+			font-size: medium;
+			color: #FFFFFF;
+			text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+			text-align: center;
+			transition: all 0.2s;
+		}
+
+		button.Increment:hover {
+			border-color: rgba(255, 255, 255, 1);
+		}
+
+		@media all and (max-width:30em) {
+			button.Increment {
+				display: block;
+				margin: 0 auto;
+
+			}
+		}
+
+		button.Decrement {
+
+			display: inline-block;
+			padding: 0.4em 1.3em;
+			border: 0.16em solid rgba(255, 255, 255, 0);
+			border-radius: 2em;
+			box-sizing: border-box;
+			text-decoration: none;
+			font-family: 'Roboto', sans-serif;
+			font-weight: 300;
+			font-size: medium;
+			color: #FFFFFF;
+			text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+			text-align: center;
+			transition: all 0.2s;
+		}
+
+		button.Decrement:hover {
+			border-color: rgba(255, 255, 255, 1);
+		}
+
+		@media all and (max-width:30em) {
+			button.Decrement {
+				display: block;
+				margin: 0 auto;
+
+			}
+		}
+
+		button.Reset {
+
+			display: inline-block;
+			padding: 0.4em 1.3em;
+			border: 0.16em solid rgba(255, 255, 255, 0);
+			border-radius: 2em;
+			box-sizing: border-box;
+			text-decoration: none;
+			font-family: 'Roboto', sans-serif;
+			font-weight: 300;
+			font-size: medium;
+			color: #FFFFFF;
+			text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+			text-align: center;
+			transition: all 0.2s;
+		}
+
+		button.Reset:hover {
+			border-color: rgba(255, 255, 255, 1);
+		}
+
+		@media all and (max-width:30em) {
+			button.Reset {
+				display: block;
+				margin: 0 auto;
+
+			}
+		}
+	</style>
+
 </body>
 
 </html>
