--- a/task-08/index.html
+++ b/task-08/index.html
@@ -16,13 +16,13 @@
   <style>h1 {font-family: "Bungee Inline", sans-serif;}</style>
   <div class="set">
     <style>button {font-family: "Bungee Inline", sans-serif;}</style>
-    <button class="w drum">W</button>
-    <button class="a drum">A</button>
-    <button class="s drum">S</button>
-    <button class="d drum">D</button>
-    <button class="j drum">J</button>
-    <button class="k drum">K</button>
-    <button class="l drum">L</button>
+    <button class="w drum" onclick="sound('w')">W</button>
+    <button class="a drum" onclick="sound('a')">A</button>
+    <button class="s drum" onclick="sound('s')">S</button>
+    <button class="d drum" onclick="sound('d')">D</button>
+    <button class="j drum" onclick="sound('j')">J</button>
+    <button class="k drum" onclick="sound('k')">K</button>
+    <button class="l drum" onclick="sound('l')">L</button>
   </div>
   
 </body>
